--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<servlet.version>3.1.0</servlet.version>
-		<spring.version>5.0.6.RELEASE</spring.version>
+		<spring.version>[5.0.16,)</spring.version>
 		<jackson.version>2.9.6</jackson.version>
 
 		<junit.jupiter.version>5.0.1</junit.jupiter.version>
